@@ -1,3 +1,7 @@
+2009-06-15 Sarka Todorova <sarka.todorova@cern.ch>
+	* averaged spacer option 
+	* tagged as MuonTrackingGeometry-00-05-15
+
 2009-06-12 Sarka Todorova <sarka.todorova@cern.ch>
 	* memory leak in spacer
 	* tagged as MuonTrackingGeometry-00-05-14
